--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/images/ChatGPT Image Apr 20, 2025, 11_29_19 AM.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#F6AD55" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ocean Crown Multi-links Enterprises Ltd - Global Shipping and Logistics Services"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/ChatGPT Image Apr 20, 2025, 11_29_19 AM.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ocean Crown - Shipping & Logistics</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
