--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#F6AD55" />
     <meta
       name="description"
-      content="Ocean Crown Multi-links Enterprises Ltd - Global Shipping and Logistics Services"
+      content="Ocean Crown Multi-links Enterprises Ltd - Global Shipping & Logistics Services"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/ChatGPT Image Apr 20, 2025, 11_29_19 AM.png" />
     <!--
@@ -15,6 +15,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
